# nx-software-center

./: .gitignore  .travis.yml
cmake/: libappimage.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  InstallCommand.cpp  ListCommand.cpp  ListCommand.h  main.cpp
src/cli/commands/: GetCommand.cpp  GetCommand.h  ListCommand.cpp  ListCommand.h  RemoveCommand.cpp  RemoveCommand.h
src/gateways/: FileDownload.cpp  OCSStoreDataParser.cpp  OCSStoreSource.cpp
test/: CMakeLists.txt
test/src/remote/: CMakeLists.txt  TestAppImageIndex.cpp
